creating jsx navbar and functionality

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,9 @@ $secondaryLight: #fafafa;
 $secondaryDark: #e1e1e1;
 $secondaryCta: #0065ad;
 
+$light-background: #d9d9d9;
+$dark-background: #000;
+
 //Font Size
 $fs-075: 0.75rem;
 $fs-080: 0.8rem;
