--- a/src/App.scss
+++ b/src/App.scss
@@ -56,6 +56,14 @@ a:visited {
 }
 
 .header {
-	background-color: grey;
+	background-color: #d9d9d9;
 	padding: 0 1rem;
+	color: #000;
+
+	&.dark {
+		background-color: #000;
+	}
+	&.light {
+		background-color: #d9d9d9;
+	}
 }
