--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,7 @@ $desktop-breakpoint: 1280px;
 $primary: #323232;
 $primaryLight: #ffffff;
 $primaryDark: #afafaf;
-$primaryCta: #0095ff;
+$primaryCta: #0dd8cd;
 
 $secondary: #000000;
 $secondaryLight: #fafafa;
