--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -10,6 +10,7 @@
 
 	@include desktop {
 		width: 80rem;
+		height: 4.5rem;
 		margin: 0 auto;
 	}
 
@@ -56,6 +57,15 @@
 		background-color: #000000;
 		color: #ffffff;
 	}
+
+	&__right-col {
+		@include desktop {
+			order: 3;
+			display: flex;
+			gap: 1rem;
+			align-items: center;
+		}
+	}
 }
 
 .navbar-menu {
@@ -68,18 +78,19 @@
 	position: absolute;
 	top: 4rem;
 	left: 0;
+	background-color: #d9d9d9;
 
 	@include desktop {
 		display: block;
 		margin: 0;
-		// padding: 0 0 0 2rem;
 		display: grid;
-		grid-template-columns: repeat(4, auto);
+		grid-template-columns: repeat(3, auto);
 		order: 1;
 		width: 500px;
-		height: 4rem;
+		height: 4.5rem;
 		position: initial;
-		justify-content: space-between;
+		justify-content: center;
+		gap: 3rem;
 	}
 
 	&__item {
@@ -100,7 +111,7 @@
 				content: '';
 				position: absolute;
 				width: 0px;
-				height: 3px;
+				height: 5px;
 				left: 50%;
 				bottom: 0;
 				background-color: #0dd8cd;
@@ -117,39 +128,19 @@
 	&__link {
 		color: black;
 		text-decoration: none;
-		transition: background-color 0.3s;
 	}
 
 	&.active {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: flex-start;
 		justify-content: center;
-		height: clamp(50vh, 80vh, 100vh);
-		opacity: 1;
-		transform: translateY(0);
-		transition: opacity 0.3s ease, transform 0.3s ease;
+		height: 20vh;
+		border-top: solid 1px white;
+		padding-left: 2rem;
 
 		@include desktop {
 			display: grid;
 		}
-	}
-}
-
-// .border {
-
-// }
-
-.moon-clicked,
-.sun-clicked {
-	animation: pulse 1s;
-}
-@keyframes pulse {
-	0%,
-	100% {
-		transform: scale(1);
-	}
-	50% {
-		transform: scale(1.2);
 	}
 }
