--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 //Breakpoints
 $mobile-breakpoint: 480px;
 $tablet-breakpoint: 720px;
+$desktop-sm-breakpoint: 940px;
 $desktop-breakpoint: 1280px;
 
 //Primary Colors
