--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,12 @@ a:visited {
 	text-decoration: none;
 }
 
+mark {
+	background-color: #0dd8cd;
+	padding: 0.2rem;
+	font-weight: $fw-700;
+}
+
 .container {
 	width: 100%;
 
@@ -74,7 +80,7 @@ a:visited {
 
 .main {
 	width: 100%;
-	padding: 1rem;
+	padding: 0 2rem;
 
 	@include desktop {
 		max-width: 80rem;
