--- a/src/components/MainWork/MainWork.scss
+++ b/src/components/MainWork/MainWork.scss
@@ -2,10 +2,18 @@
 @use '../../styles/variables' as *;
 
 .mainwork {
-	margin-top: 3rem;
+	margin-top: 2rem;
 	padding-bottom: 5rem;
 
+	@include desktop-sm {
+		display: flex;
+		flex-direction: row;
+	}
+
 	&__figure {
+		@include desktop-sm {
+			padding-right: 3rem;
+		}
 		&--img {
 			background-size: cover;
 			aspect-ratio: 16/9;
@@ -29,4 +37,18 @@
 		margin-top: 1rem;
 		border-radius: 6px;
 	}
+}
+
+.carousel .control-arrow:hover {
+	background-color: rgba($primaryCta, 0.4) !important;
+}
+
+.carousel .slide img {
+	max-width: 100%;
+	height: auto;
+}
+
+.carousel .control-dots .dot {
+	box-shadow: none !important;
+	background-color: rgba($primaryCta, 1) !important;
 }
