--- a/src/components/ButtonMain/ButtonMain.scss
+++ b/src/components/ButtonMain/ButtonMain.scss
@@ -1,21 +1,18 @@
 @use '../../styles/mixins' as *;
 @use '../../styles/variables' as *;
 
-.button-prop {
+.button {
 	font-family: inherit;
-	display: none;
-	font-size: 16px;
+	font-size: 1rem;
 	background-color: $primaryCta;
 	color: #000;
 	border-radius: 5px;
 	border: none;
+	display: inline-block;
 	padding: 0.6rem;
 	transition: background-color 0.5s ease;
 	font-weight: $fw-700;
-
-	@include desktop {
-		display: block;
-	}
+	margin-top: 1rem;
 
 	&:hover {
 		background-color: #2980b9;
