--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -39,7 +39,7 @@
 
 .progress-bar__inner {
 	height: 100%;
-	background-color: rgba($primaryCta, 0.5);
+	background-color: rgba($secondaryCta, 0.5);
 	transition: width 0.3s ease-in-out;
 }
 
