--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,9 +29,14 @@ $fs-120: 1.2rem;
 $fs-150: 1.5rem;
 $fs-200: 2rem;
 $fs-250: 2.5rem;
+$fs-300: 3rem;
 $fs-350: 3.5rem;
 
 //Weight
 $fw-300: 300;
 $fw-400: 400;
 $fw-700: 700;
+
+//Font Family
+
+$ff-web: 'Titillium Web', sans-serif;
