--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,8 +5,8 @@
 	font-family: inherit;
 	display: none;
 	font-size: 16px;
-	background-color: $primaryCta;
-	color: #000;
+	background-color: $secondaryCta;
+	color: #fff;
 	border-radius: 5px;
 	border: none;
 	padding: 0.6rem;
