--- a/src/components/MainProject/MainProject.scss
+++ b/src/components/MainProject/MainProject.scss
@@ -41,7 +41,7 @@
 }
 
 .carousel .control-arrow:hover {
-	background-color: rgba($primaryCta, 0.4) !important;
+	background-color: rgba($secondaryCta, 0.4) !important;
 }
 
 .carousel .slide img {
@@ -51,5 +51,5 @@
 
 .carousel .control-dots .dot {
 	box-shadow: none !important;
-	background-color: rgba($primaryCta, 1) !important;
+	background-color: rgba($secondaryCta, 1) !important;
 }
