--- a/src/components/TabSection/TabSection.scss
+++ b/src/components/TabSection/TabSection.scss
@@ -12,6 +12,7 @@
 	&-title {
 		font-size: $fs-120;
 		margin-bottom: 1rem;
+		font-family: $ff-web;
 	}
 	&-buttons {
 		display: flex;
@@ -19,6 +20,7 @@
 		justify-content: space-around;
 		align-items: stretch;
 		gap: 0.5rem;
+
 		// padding: 1rem;
 
 		@include desktop-sm {
@@ -34,9 +36,10 @@
 		padding: 1rem;
 		text-align: left;
 		display: flex;
+		color: $primary;
 
 		&.active {
-			border-left: solid 10px $primaryCta;
+			border-left: solid 10px $secondaryCta;
 			font-weight: $fw-700;
 		}
 	}
@@ -53,6 +56,7 @@
 			height: auto;
 			flex: 3;
 			margin-top: 0;
+			margin-bottom: 5rem;
 			// padding: 1rem;
 		}
 	}
