--- a/src/components/TabSection/TabSection.scss
+++ b/src/components/TabSection/TabSection.scss
@@ -39,7 +39,7 @@
 		color: $primary;
 
 		&.active {
-			border-left: solid 10px $secondaryCta;
+			border-left: solid 10px $colorPink;
 			font-weight: $fw-700;
 		}
 	}
