--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,13 @@ $primaryLight: #ffffff;
 $primaryDark: #afafaf;
 $primaryCta: #0dd8cd;
 
+$colorLightGreen: #87b1ac;
+$colorBlue: #19184d;
+$colorPink: #ec8091;
+$colorGreen: #084227;
+$colorPurple: #2c3950;
+$colorCream: #f7d5b1;
+
 $secondary: #000000;
 $secondaryLight: #fafafa;
 $secondaryDark: #e1e1e1;
