--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,14 +4,15 @@
 .button-prop {
 	font-family: inherit;
 	display: none;
-	font-size: 16px;
-	background-color: $secondaryCta;
+	font-size: $fs-090;
+	background-color: $colorPurple;
 	color: #fff;
 	border-radius: 5px;
 	border: none;
 	padding: 0.6rem;
 	transition: background-color 0.5s ease;
 	font-weight: $fw-700;
+	cursor: pointer;
 
 	@include desktop {
 		display: block;
