--- a/src/components/MainProject/MainProject.scss
+++ b/src/components/MainProject/MainProject.scss
@@ -23,9 +23,14 @@
 	&__text {
 		margin-top: 1rem;
 
+		&--title {
+			margin-top: 0.5rem;
+		}
+
 		&--body {
 			font-weight: $fw-300;
 			line-height: 1.3;
+			margin-bottom: 1rem;
 		}
 	}
 
@@ -40,6 +45,9 @@
 	}
 }
 
+.carousel {
+	border: solid 2px $colorPurple;
+}
 .carousel .control-arrow:hover {
 	background-color: rgba($secondaryCta, 0.4) !important;
 }
