--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
 .navbar {
 	display: flex;
 	justify-content: space-between;
-	height: 4rem;
+	height: 3.5rem;
 	padding: 0 1.5rem;
 	align-items: center;
 
@@ -21,6 +21,7 @@
 		cursor: pointer;
 		font-size: 1.8rem;
 		margin-top: 0.5rem;
+		color: $colorBlue;
 
 		@include desktop {
 			display: none;
@@ -31,6 +32,7 @@
 		font-family: 'Titillium Web', sans-serif;
 		font-size: 2.3rem;
 		letter-spacing: 0.1rem;
+		color: $colorBlue;
 
 		@include desktop {
 			order: 0;
@@ -43,6 +45,7 @@
 		font-size: 1.5rem;
 		border: none;
 		margin-top: 0.8rem;
+		color: $colorBlue;
 
 		@include desktop {
 			order: 3;
@@ -73,12 +76,12 @@
 	list-style: none;
 	flex-direction: column;
 	width: 100%;
-	line-height: 3.5;
+	line-height: 3.15;
 	transition: height 0.3s ease;
 	position: absolute;
 	top: 4rem;
 	left: 0;
-	background-color: #d9d9d9;
+	background-color: $colorLightGreen;
 
 	@include desktop {
 		display: block;
@@ -87,16 +90,16 @@
 		grid-template-columns: repeat(3, auto);
 		order: 1;
 		width: 500px;
-		height: 4rem;
+		height: 3rem;
 		position: initial;
 		justify-content: center;
 		gap: 2rem;
 	}
 
 	&__item {
-		font-size: 1.125rem;
-		display: flex;
-		align-items: center;
+		font-size: $fs-110;
+		// display: flex;
+		// align-items: center;
 		border: none;
 		position: relative;
 
@@ -111,10 +114,10 @@
 				content: '';
 				position: absolute;
 				width: 0px;
-				height: 4px;
+				height: 3px;
 				left: 50%;
 				bottom: 0;
-				background-color: $secondaryCta;
+				background-color: $colorPurple;
 				transition: all ease-in-out 0.2s;
 			}
 		}
@@ -126,8 +129,9 @@
 	}
 
 	&__link {
-		color: black;
+		color: $colorPurple;
 		text-decoration: none;
+		font-weight: $fw-400;
 
 		&--mobile {
 			display: block;
