--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -23,7 +23,7 @@
 		font-weight: $fw-300;
 		line-height: 1.3;
 		min-height: auto;
-		border-top: solid 1px black;
+		border-top: solid 1px #afafaf;
 		padding: 0.5rem 0;
 	}
 }
