--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@
 html {
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
+	scroll-padding-top: 2rem;
 }
 
 *,
@@ -77,7 +79,7 @@ p {
 }
 
 .header {
-	background-color: #d9d9d9;
+	background-color: #87b1ac;
 	color: #000;
 
 	&.dark {
@@ -90,12 +92,11 @@ p {
 
 .main {
 	width: 100%;
-	padding: 0 1.5rem;
+	padding: 0 2rem;
 
 	@include desktop-sm {
 		max-width: 80rem;
 		margin: 0 auto;
-		// padding: 0;
 	}
 }
 
