--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -11,6 +11,7 @@
 		margin-inline: auto;
 		background-size: cover;
 		background-color: rgba(217, 217, 217, 0.2);
+		border: solid 1px $colorPurple;
 	}
 
 	&__title {
@@ -22,8 +23,13 @@
 	&__body {
 		font-weight: $fw-300;
 		line-height: 1.3;
-		min-height: auto;
 		border-top: solid 1px #afafaf;
 		padding: 0.5rem 0;
+		margin-bottom: 1rem;
+		width: 100%;
+
+		@include desktop-sm {
+			min-height: 120px;
+		}
 	}
 }
