add information to the projects section, also add a validator when the email from the form has been sent

--- a/src/App.scss
+++ b/src/App.scss
@@ -79,8 +79,8 @@ p {
 }
 
 .header {
-	background-color: #87b1ac;
-	color: #000;
+	background-color: #373b61;
+	color: #a7d5e5;
 
 	&.dark {
 		background-color: #000;
