--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $primary: #323232;
 $primaryLight: #ffffff;
 $primaryDark: #afafaf;
 $primaryCta: #0dd8cd;
+$lightColour: #fcefe9;
 
 $colorLightGreen: #87b1ac;
 $colorBlue: #19184d;
