--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,8 +5,8 @@
 	font-family: inherit;
 	display: none;
 	font-size: $fs-090;
-	background-color: $colorPurple;
-	color: #fff;
+	background-color: $lightColour;
+	color: #373b61;
 	border-radius: 5px;
 	border: none;
 	padding: 0.6rem;
