--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,26 +5,16 @@ $desktop-sm-breakpoint: 940px;
 $desktop-breakpoint: 1280px;
 
 //Primary Colors
-$primary: #323232;
+$primary: #233142;
 $primaryLight: #ffffff;
 $primaryDark: #afafaf;
 $primaryCta: #0dd8cd;
-$lightColour: #fcefe9;
-
-$colorLightGreen: #87b1ac;
-$colorBlue: #19184d;
-$colorPink: #ec8091;
-$colorGreen: #084227;
+$lightColour: #e3e3e3;
+$colorLightGreen: #9fd3c7;
 $colorPurple: #2c3950;
-$colorCream: #f7d5b1;
-
-$secondary: #000000;
-$secondaryLight: #fafafa;
+$colorCream: #feffdf;
+$colorLightBlue: #455d7a;
 $secondaryDark: #e1e1e1;
-$secondaryCta: #0065ad;
-
-$light-background: #d9d9d9;
-$dark-background: #000;
 
 //Font Size
 $fs-075: 0.75rem;
