--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -54,7 +54,7 @@
 	&__submit {
 		font-size: $fs-100;
 		background-color: $colorPurple;
-		color: #fff;
+		color: $lightColour;
 		border-radius: 5px;
 		border: none;
 		padding: 1rem 1.5rem;
@@ -65,18 +65,18 @@
 		margin-top: 1rem;
 
 		&:hover {
-			box-shadow: 5px 5px 0px $colorLightGreen;
-			background-color: #3978a3;
-			color: #fff;
+			box-shadow: 5px 5px 0px $colorLightBlue;
+			background-color: $colorLightGreen;
+			color: $colorLightBlue;
 		}
 	}
 
 	&__validator {
 		font-size: 1rem;
-		background-color: #87b1ac;
+		background-color: $colorLightGreen;
 		font-weight: $fw-700;
 		padding: 0.1rem 0.3rem;
-		color: white;
+		color: $colorLightBlue;
 		margin-top: 1rem;
 		position: absolute;
 		border-radius: 0.2rem;
