--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -31,33 +31,11 @@
 		font-family: 'Titillium Web', sans-serif;
 		font-size: 2.3rem;
 		letter-spacing: 0.1rem;
-		color: #a7d5e5;
+		color: $lightColour;
 
 		@include desktop {
 			order: 0;
 		}
-	}
-
-	&__theme {
-		font-weight: $fw-400;
-		cursor: pointer;
-		font-size: 1.5rem;
-		border: none;
-		margin-top: 0.8rem;
-		color: $colorBlue;
-
-		@include desktop {
-			order: 3;
-		}
-	}
-
-	&.light {
-		color: #000000;
-	}
-
-	&.dark {
-		background-color: #000000;
-		color: #ffffff;
 	}
 
 	&__right-col {
@@ -81,7 +59,8 @@
 	position: absolute;
 	top: 3.5rem;
 	left: 0;
-	background-color: #373b61;
+	background-color: $colorLightBlue;
+	z-index: 1;
 
 	@include desktop-sm {
 		display: block;
@@ -90,7 +69,7 @@
 		grid-template-columns: repeat(3, auto);
 		order: 1;
 		width: 400px;
-		height: 3rem;
+		height: 2.95rem;
 		position: initial;
 		justify-content: center;
 		gap: 1.5rem;
@@ -112,10 +91,10 @@
 				content: '';
 				position: absolute;
 				width: 0px;
-				height: 3px;
+				height: 4px;
 				left: 50%;
 				bottom: 0;
-				background-color: #fcefe9;
+				background-color: $lightColour;
 				transition: all ease-in-out 0.2s;
 			}
 		}
@@ -127,15 +106,15 @@
 	}
 
 	&__link {
-		color: #a7d5e5;
+		color: $lightColour;
 		text-decoration: none;
 		font-weight: $fw-400;
 
 		&--mobile {
 			display: block;
 			font-size: $fs-090;
-			background-color: #fcefe9;
-			color: #373b61;
+			background-color: $lightColour;
+			color: $colorLightBlue;
 			border-radius: 5px;
 			border: none;
 			padding: 0.1rem 0.7rem;
@@ -162,9 +141,9 @@
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: center;
-		border-top: solid 1px white;
+		border-top: solid 1px $primaryLight;
 		padding-left: 2rem;
-		box-shadow: 0px 20px 50px -40px #000;
+		box-shadow: 0px 20px 50px -40px $primary;
 		margin-top: 0.5rem;
 
 		@include desktop {
