--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -10,7 +10,7 @@
 .progress-bar__label {
 	font-weight: bold;
 	flex: 1;
-	background-color: $colorPurple;
+	background-color: $colorLightBlue;
 	color: $primaryLight;
 	font-weight: $fw-400;
 	font-size: $fs-075;
@@ -28,7 +28,7 @@
 .progress-bar__outer {
 	width: 100%;
 	height: 1.5rem;
-	background-color: #f2f2f2;
+	background-color: $lightColour;
 	overflow: hidden;
 	flex: 4;
 
