--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -23,7 +23,7 @@
 	&__body {
 		font-weight: $fw-300;
 		line-height: 1.3;
-		border-top: solid 1px #afafaf;
+		border-top: solid 1px $primary;
 		padding: 0.5rem 0;
 		margin-bottom: 1rem;
 		width: 100%;
