add headroom.js to hide and show hader when scroll also modify size and state of buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,6 +81,7 @@ p {
 .header {
 	background-color: $colorLightBlue;
 	color: #a7d5e5;
+	box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
 }
 
 .main {
