add anchor link to get back to top after cliking logo

--- a/src/components/ButtonMain/ButtonMain.scss
+++ b/src/components/ButtonMain/ButtonMain.scss
@@ -14,7 +14,7 @@
 	font-weight: $fw-700;
 
 	&:hover {
-		box-shadow: 5px 5px 0px $colorLightBlue;
+		// box-shadow: 5px 5px 0px $colorLightBlue;
 		background-color: $colorLightGreen;
 		color: $colorLightBlue;
 	}
