--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -74,7 +74,7 @@
 		margin-top: 1rem;
 
 		&:hover {
-			box-shadow: 5px 5px 0px $colorLightBlue;
+			// box-shadow: 5px 5px 0px $colorLightBlue;
 			background-color: $colorLightGreen;
 			color: $colorLightBlue;
 		}
