--- a/src/components/ButtonMain/ButtonMain.scss
+++ b/src/components/ButtonMain/ButtonMain.scss
@@ -12,6 +12,7 @@
 	padding: 0.6rem;
 	transition: all 0.2s ease;
 	font-weight: $fw-700;
+	cursor: pointer;
 
 	&:hover {
 		// box-shadow: 5px 5px 0px $colorLightBlue;
