--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -9,7 +9,7 @@
 	&__image {
 		aspect-ratio: 16/9;
 		outline: solid 1px $colorPurple;
-		max-height: 100%;
+		min-height: 100px;
 
 		img {
 			margin-bottom: -10px;
