add scrollbar navigartion for the project section to show the whole web design image

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -40,8 +40,8 @@
 	}
 }
 
-.react-custom-scrollbars-wrapper > .react-custom-scrollbars-container {
-	.track-vertical {
-		margin-bottom: 0 !important;
-	}
-}
+// .react-custom-scrollbars-wrapper > .react-custom-scrollbars-container {
+// 	.track-vertical {
+// 		margin-bottom: 0 !important;
+// 	}
+// }
