add github icon to each project that has link and add scrollbar to web project in order to see the whole page

--- a/src/components/ButtonMain/ButtonMain.scss
+++ b/src/components/ButtonMain/ButtonMain.scss
@@ -11,7 +11,7 @@
 	display: inline-block;
 	padding: 0.6rem;
 	transition: all 0.2s ease;
-	font-weight: $fw-700;
+	// font-weight: $fw-700;
 	cursor: pointer;
 
 	&:hover {
